[Feature] 참여자 과반수 이상 시 추천 진행 API 구현
- POST /api/v1/recommend-results/proceed 엔드포인트 완성
- 과반수 조건: currentCount * 2 >= peopleCount
- ErrorCode 추가: PARTICIPANT_MAJORITY_NOT_REACHED(P007), RECOMMEND_ALREADY_PROCEEDED(REC003)
- RecommendResultFacade에 proceedRecommendation 구현 (LockManager 동시성 제어)
- RecommendResultService에 existsByGatheringId 메서드 추가

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>